@@ -1,3 +1,7 @@
+2013-02-19  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Added support for Weibo.
+
 2013-02-15  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* account: Added support for sending HTML e-mail. Add
